[project]
name = "roommate-premium-analyzer"
version = "0.1.0"
description = "AI-powered strategy tool to identify high-yield student housing markets using HUD rent data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.15.0",
    "openpyxl>=3.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = []
